tests/basic/not_neg_01.pan.out
tests/basic/not_neg_01.pan:4:1-3: error: unable to verify type of f6
tests/basic/not_neg_01.pan:7:1-3: error: unable to verify type of f7